# dev_gmail_filter_manager

./: .gitignore  Cargo.toml  readme.md  sample.env
src/: interface.rs  main.rs
src/command/: diff.rs  mod.rs  sync.rs  verification.rs
