[package]
name = "gmail_filter_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
regex = "1.10.3"
serde_json = "1.0.111"
